--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
          <div class="row justify-content-center">
             <div class="col-md-10">
                <h1 class="text-white display-4">JOM BELAJAR HACK</h1>
-               <p class="text-white">The previous workshop draws on the light that Hibiscus Lab shines on the world stage</p>
+               <p class="text-white">The new workshop draws on the light that Hibiscus Lab shines on the world stage.</p>
                <a href="#contact" class="btn btn-brand">Contact Now</a>
             </div>
          </div>
@@ -499,9 +499,9 @@
                <div class="col-md-2">
                   <h5 class="title-sm">Contact</h5>
                   <div class="footer-links">
-                     <p class="mb">1649 Norman Street, Los Angeles, 9001</p>
-                     <p class="mb-">8(800)316-06-42</p>
-                     <p class="mb">hello@yourdomain.com</p>
+                     <p class="mb-">SSM:</p>
+                     <p class="mb">Creative Industry Development Centre Level 16, UNIKL Campus City</p>
+                     <p class="mb">hello@biscus.my</p>
                   </div>
                </div>
             </div>
@@ -514,7 +514,7 @@
                   <p class="mb-0">© Agency2021. All rights reserved</p>
                </div>
                <div class="col-auto">
-                  <p class="mb-0">Created with ❤️ by SA7MAN</p>
+                  <p class="mb-0">Sponsored by Tarsoft Sdn. Bhd </p>
                </div>
             </div>
          </div>
