--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
          <div class="container">
             <div class="row gy-5">
                <div class="col-md-4">
-                  <h4 class="logo-text">Lissome</h4>
-                  <p>Praesent vulputate neque nec sem fermentum porttitor. Mauris eget dolor convallis, trista, dignissim sapien. Duis vel felis dictu</p>
+                  <h4 class="logo-text">Hibiscus Lab</h4>
+                  <p>SSM ID:XXXXXX</p>
                   <div class="social-icons">
                      <a href="#"><i class="bx bxl-facebook"></i></a>
                      <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -499,8 +499,8 @@
                <div class="col-md-2">
                   <h5 class="title-sm">Contact</h5>
                   <div class="footer-links">
-                     <p class="mb-">SSM:</p>
                      <p class="mb">Creative Industry Development Centre Level 16, UNIKL Campus City</p>
+                     <p class="mb-">011-33488901</p>
                      <p class="mb">hello@biscus.my</p>
                   </div>
                </div>
