--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
    <section id="portfolio" class="row g-0 py-0">
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-               <img src="img/p1.jpg" alt="">
+               <img src="img/p1.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Project title</h3>
@@ -132,7 +132,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-               <img src="img/p2.jpg" alt="">
+               <img src="img/p2.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Project title</h3>
@@ -143,7 +143,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-               <img src="img/p3.jpg" alt="">
+               <img src="img/p3.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Project title</h3>
@@ -154,7 +154,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-               <img src="img/p4.jpg" alt="">
+               <img src="img/p4.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Project title</h3>
@@ -165,7 +165,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-               <img src="img/p5.jpg" alt="">
+               <img src="img/p5.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Project title</h3>
@@ -176,7 +176,29 @@
       </div>
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-               <img src="img/p6.jpg" alt="">
+               <img src="img/p6.png" alt="">
+               <div class="portfolio-overlay">
+                  <div>
+                     <h3>Project title</h3>
+                     <h6>Project subtite</h6>
+                  </div>
+               </div>
+         </div>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+         <div class="portfolio-item">
+               <img src="img/p7.png" alt="">
+               <div class="portfolio-overlay">
+                  <div>
+                     <h3>Project title</h3>
+                     <h6>Project subtite</h6>
+                  </div>
+               </div>
+         </div>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+         <div class="portfolio-item">
+               <img src="img/p8.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Project title</h3>
