--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                <img src="img/p1.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>Jom Belajar Hack (Intermediate)</h3>
+                     <h6>Start at 4th March 2023</h6>
                   </div>
                </div>
          </div>
@@ -135,8 +135,8 @@
                <img src="img/p2.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>Sharing Circles</h3>
+                     <h6>COMING SOON</h6>
                   </div>
                </div>
          </div>
@@ -146,8 +146,8 @@
                <img src="img/p3.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>Jom Belajar CTF</h3>
+                     <h6>COMING SOON</h6>
                   </div>
                </div>
          </div>
@@ -157,8 +157,8 @@
                <img src="img/p4.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>Mentoring Mondays</h3>
+                     <h6>COMING SOON</h6>
                   </div>
                </div>
          </div>
@@ -168,8 +168,8 @@
                <img src="img/p5.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>3108 CTF</h3>
+                     <h6>COMING SOON</h6>
                   </div>
                </div>
          </div>
@@ -179,8 +179,8 @@
                <img src="img/p6.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>School of Security</h3>
+                     <h6>COMING SOON</h6>
                   </div>
                </div>
          </div>
@@ -190,8 +190,8 @@
                <img src="img/p7.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>Jom Belajar Hack (Beginner)</h3>
+                     <h6>COMING SOON</h6>
                   </div>
                </div>
          </div>
@@ -201,8 +201,8 @@
                <img src="img/p8.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Project title</h3>
-                     <h6>Project subtite</h6>
+                     <h3>Fight The Phish</h3>
+                     <h6>COMING SOON</h6>
                   </div>
                </div>
          </div>
