--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
             </div>
          </div>
          <div class="p-4">
-            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
-            <small class="text-white">Web Designer</small>
+            <h5 class="title-sm mt-3 mb-0 text-white">Irfan Badzlin</h5>
+            <small class="text-white">CEO & Founder</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
@@ -305,8 +305,8 @@
             </div>
          </div>
          <div class="p-4">
-            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
-            <small class="text-white">Web Designer</small>
+            <h5 class="title-sm mt-3 mb-0 text-white">Nur</h5>
+            <small class="text-white">Contributor</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
