--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       </div>
       <div class="col-lg-3 col-sm-6 team-member even">
          <div class="team-member-img">
-            <img src="img/team-4-800x800.jpg" alt="">
+            <img src="img/team-4-800x800.jpeg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
