--- a/index.html
+++ b/index.html
@@ -533,10 +533,10 @@
          <div class="container">
             <div class="row justify-content-between gy-3">
                <div class="col-md-6">
-                  <p class="mb-0">© Agency2021. All rights reserved</p>
+                  <p class="mb-0">Copyright © 2023 Hibiscus Lab</p>
                </div>
                <div class="col-auto">
-                  <p class="mb-0">Sponsored by Tarsoft Sdn. Bhd </p>
+                  <p class="mb-0">Website Sponsored by Tarsoft Sdn. Bhd </p>
                </div>
             </div>
          </div>
