--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <div class="container">
          <div class="row">
             <div class="col-12 section-intro">
-               <h1>Our Features</h1>
+               <h1>Our Roadmap</h1>
                <div class="hline"></div>
             </div>
          </div>
@@ -223,7 +223,7 @@
                   <i class="bx bx-check"></i>
                </div>
                <div>
-                  <h5 class="title-sm">Feature</h5>
+                  <h5 class="title-sm">2022</h5>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
                </div>
             </div>
@@ -232,7 +232,7 @@
                   <i class="bx bx-check"></i>
                </div>
                <div>
-                  <h5 class="title-sm">Feature</h5>
+                  <h5 class="title-sm">2023</h5>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
                </div>
             </div>
@@ -241,39 +241,10 @@
                   <i class="bx bx-check"></i>
                </div>
                <div>
-                  <h5 class="title-sm">Feature</h5>
+                  <h5 class="title-sm">2024</h5>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
                </div>
             </div>
-            <div class="col-lg-4 col-sm-6 feature d-flex">
-               <div class="icon-box me-3">
-                  <i class="bx bx-check"></i>
-               </div>
-               <div>
-                  <h5 class="title-sm">Feature</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
-               </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 feature d-flex">
-               <div class="icon-box me-3">
-                  <i class="bx bx-check"></i>
-               </div>
-               <div>
-                  <h5 class="title-sm">Feature</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
-               </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 feature d-flex">
-               <div class="icon-box me-3">
-                  <i class="bx bx-check"></i>
-               </div>
-               <div>
-                  <h5 class="title-sm">Feature</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
-               </div>
-            </div>
-         </div>
-      </div>
    </section>
 
    <section id="team" class="row g-0 py-0 text-center">
