--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <li class="nav-item">
               <a class="nav-link" href="#home">Home</a>
             </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#services">Services</a>
-             </li>
              <li class="nav-item">
                <a class="nav-link" href="#portfolio">Portfolio</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#features">Features</a>
+               <a class="nav-link" href="#services">Services</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="#features">Roadmap</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="#team">Team</a>
