--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <div class="container text-center">
          <div class="row justify-content-center">
             <div class="col-md-10">
-               <h1 class="text-white display-4">JOM BELAJAR HACK</h1>
-               <p class="text-white">The new workshop draws on the light that Hibiscus Lab shines on the world stage.</p>
+               <h1 class="text-white display-4">WELCOME TO HIBISCUS LAB</h1>
+               <p class="text-white">Let's build MAGIC in the first-ever cybercommunity owned by its users.</p>
                <a href="#contact" class="btn btn-brand">Contact Now</a>
             </div>
          </div>
@@ -490,7 +490,7 @@
                   </div>
                </div>
                <div class="col-md-2">
-                  <h5 class="title-sm">Contact</h5>
+                  <h5 class="title-sm">Contact Us</h5>
                   <div class="footer-links">
                      <p class="mb">Creative Industry Development Centre Level 16, UNIKL Campus City</p>
                      <p class="mb-">011-33488901</p>
