--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     
 
-    <title>Hibiscus Lab Bootstrap 5 Template</title>
+    <title>Hibiscus Lab</title>
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     
