--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
                </div>
                <div>
                   <h5 class="title-sm">2022</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+                  <p>- Jom Belajar Hack (Beginner)</p>
+                  <p>- 3108 CTF</p>
                </div>
             </div>
             <div class="col-lg-4 col-sm-6 feature d-flex">
