--- a/index.html
+++ b/index.html
@@ -250,7 +250,14 @@
                </div>
                <div>
                   <h5 class="title-sm">2024</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt inventore quibusdam accusamus esse.</p>
+                  <p>Jom Belajar Hack (Intermediate)</p>
+                  <p>Sharing Circles</p>
+                  <p>Jom Belajar CTF</p>
+                  <p>Mentoring Mondays</p>
+                  <p>3108 CTF</p>
+                  <p>School of Security</p>
+                  <p>Jom Belajar Hack (Beginner)</p>
+                  <p>Fight the Phish</p>
                </div>
             </div>
    </section>
