--- a/index.html
+++ b/index.html
@@ -263,6 +263,12 @@
    </section>
 
    <section id="team" class="row g-0 py-0 text-center">
+            <div class="row">
+            <div class="col-12 section-intro">
+               <h1>Meet Our Team</h1>
+               <div class="hline"></div>
+            </div>
+         </div>
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
             <img src="img/team-3-800x800.jpg" alt="">
@@ -409,6 +415,12 @@
    </section>
 
    <section id="clients" class="bg-light">
+            <div class="row">
+            <div class="col-12 section-intro">
+               <h1>Our Partners</h1>
+               <div class="hline"></div>
+            </div>
+         </div>
       <div class="container">
          <div class="row gy-4">
             <div class="col-lg-2 col-md-3 col-6">
@@ -464,10 +476,10 @@
       <div class="container py-4">
          <div class="row justify-content-center">
             <div class="col-md-6">
-               <h3 class="text-white">Let's build something great.</h3>
+               <h3 class="text-white">Join a fast-growing local cybersecurity community.</h3>
             </div>
             <div class="col-auto">
-               <a href="#" class="btn btn-light">Get Started</a>
+               <a href="#" class="btn btn-light">Join Now</a>
             </div>
          </div>
       </div>
