--- a/index.html
+++ b/index.html
@@ -184,11 +184,12 @@
                <h4 class="title-sm mt-4">Cybersecurity Awareness</h4>
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem incidunt sunt molestiae!</p>
             </div>
-           
+        
+            <div class="container">
+            <div class="row">
             <div class="col-12 section-intro">
                <h1>Mission</h1>
                <div class="hline"></div>
-            </div>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
