--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
 
     <title>Hibiscus Lab</title>
+    <link rel="shorcut_icon" type="image/png" href="img/favicon.png">
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     
