--- a/index.html
+++ b/index.html
@@ -168,22 +168,22 @@
                <div class="icon-box">
                   <i class='bx bxs-landscape'></i>
                </div>
-               <h4 class="title-sm mt-4">Vulnerability Assessment</h4>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem incidunt sunt molestiae!</p>
+               <h4 class="title-sm mt-4">Create</h4>
+               <p> create a world where cybersecurity is a fundamental aspect of daily life, where individuals are empowered to protect themselves and their data, and where organizations prioritize cybersecurity as a core business function.</p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
                   <i class='bx bxs-coffee'></i>
                </div>
-               <h4 class="title-sm mt-4">Coding</h4>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem incidunt sunt molestiae!</p>
+               <h4 class="title-sm mt-4">Build</h4>
+               <p>build a community where cybersecurity knowledge is freely shared, and individuals from diverse backgrounds and skill levels can come together to learn, collaborate, and innovate to improve cybersecurity for all.</p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
                   <i class='bx bxs-image'></i>
                </div>
-               <h4 class="title-sm mt-4">Cybersecurity Awareness</h4>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem incidunt sunt molestiae!</p>
+               <h4 class="title-sm mt-4">Promote</h4>
+               <p>promote a culture of cybersecurity consciousness, where individuals and organizations are motivated and supported to make cybersecurity a top priority in their personal and professional lives.</p>
             </div>
         
             <div class="container">
@@ -196,22 +196,22 @@
                <div class="icon-box">
                   <i class='bx bxs-check-shield'></i>
                </div>
-               <h4 class="title-sm mt-4">Hacking</h4>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem incidunt sunt molestiae!</p>
+               <h4 class="title-sm mt-4">Educate</h4>
+               <p>Developing educational resources and workshops to teach people about the importance of cybersecurity and how to protect themselves online</p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
                   <i class='bx bx-laptop'></i>
                </div>
-               <h4 class="title-sm mt-4">Web Designing</h4>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem incidunt sunt molestiae!</p>
+               <h4 class="title-sm mt-4">Hosting</h4>
+               <p>Hosting community events to bring together individuals, businesses, and organizations to discuss cybersecurity challenges and collaborate on solutions</p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
                   <i class='bx bxs-happy-heart-eyes'></i>
                </div>
-               <h4 class="title-sm mt-4">UI Design</h4>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem incidunt sunt molestiae!</p>
+               <h4 class="title-sm mt-4">Partnership</h4>
+               <p>Developing partnerships with cybersecurity experts, organizations, and government agencies to support and promote cybersecurity initiatives at a local and national level.</p>
             </div>
          </div>
       </div>
