--- a/index.html
+++ b/index.html
@@ -492,6 +492,40 @@
          </div>
       </div>
    </section>
+        
+        <!-- contact section -->
+    <section class = "contact" id = "contact">
+      <div class = "container">
+        <div class = "title">
+          <h2 class = "wow animate__animated animate__bounceIn animate__slow">Contact Us</h2>
+          <p class = "text">Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+
+        <div class = "row wow animate__animated animate__fadeInUp animate__slow">
+          <div class = "contact-left">
+            <h2>Send Message Here</h2>
+            <form>
+              <input type = "text" class = "form-control" placeholder="Name">
+              <input type = "email" class = "form-control" placeholder="Email">
+              <textarea placeholder="Message" rows = "6"></textarea>
+              <button type = "submit" class = "submit-btn">Send Now</button>
+            </form>
+          </div>
+
+          <div class = "contact-right">
+            <div>
+              <h2>Visit Office</h2>
+              <p class = "text">Creative Industry Development Centre Level 16, UNIKL Campus City</p>
+            </div>
+            <div>
+              <h2>Send Email</h2>
+              <p class = "text">hello@biscus.my</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of contact section -->
 
    <footer>
       <div class="footer-top">
