--- a/index.html
+++ b/index.html
@@ -492,40 +492,6 @@
          </div>
       </div>
    </section>
-        
-        <!-- contact section -->
-    <section class = "contact" id = "contact">
-      <div class = "container">
-        <div class = "title">
-          <h2 class = "wow animate__animated animate__bounceIn animate__slow">Contact Us</h2>
-          <p class = "text">Lorem ipsum dolor sit amet consectetur</p>
-        </div>
-
-        <div class = "row wow animate__animated animate__fadeInUp animate__slow">
-          <div class = "contact-left">
-            <h2>Send Message Here</h2>
-            <form>
-              <input type = "text" class = "form-control" placeholder="Name">
-              <input type = "email" class = "form-control" placeholder="Email">
-              <textarea placeholder="Message" rows = "6"></textarea>
-              <button type = "submit" class = "submit-btn">Send Now</button>
-            </form>
-          </div>
-
-          <div class = "contact-right">
-            <div>
-              <h2>Visit Office</h2>
-              <p class = "text">Creative Industry Development Centre Level 16, UNIKL Campus City</p>
-            </div>
-            <div>
-              <h2>Send Email</h2>
-              <p class = "text">hello@biscus.my</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end of contact section -->
 
    <footer>
       <div class="footer-top">
@@ -538,6 +504,9 @@
                      <a href="#"><i class="bx bxl-facebook"></i></a>
                      <a href="#"><i class="bx bxl-twitter"></i></a>
                      <a href="#"><i class="bx bxl-instagram"></i></a>
+                     <a href="#"><i class="bx bxl-telegram"></i></a>
+                     <a href="#"><i class="bx bxl-tiktok"></i></a>
+                     <a href="#"><i class="bx bxl-youtube"></i></a>
                      <a href="#"><i class="bx bxl-github"></i></a>
                   </div>
                </div>
@@ -547,7 +516,6 @@
                      <a href="#">Services</a>
                      <a href="#">Our Work</a>
                      <a href="#">Team</a>
-                     <a href="#">Blog</a>
                   </div>
                </div>
                <div class="col-md-2">
@@ -561,8 +529,8 @@
                <div class="col-md-2">
                   <h5 class="title-sm">Contact Us</h5>
                   <div class="footer-links">
-                     <p class="mb">Creative Industry Development Centre Level 16, UNIKL Campus City</p>
-                     <p class="mb">hello@biscus.my</p>
+                     <p class="mb">Visit Us: Creative Industry Development Centre Level 16, UNIKL Campus City</p>
+                     <p class="mb">Send Email: hello@biscus.my</p>
                   </div>
                </div>
             </div>
