--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                    </div>
                    <div class="mb-3">
-                     <small>Name</small>
+                     <small>Message</small>
                      <textarea name="" id="" cols="30" rows="4" class="form-control"></textarea>
                    </div>
                   <button type="submit" class="btn btn-brand">Submit</button>
