--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
          </div>
          <div class="p-4">
             <h5 class="title-sm mt-3 mb-0 text-white">Irfan Badzlin</h5>
-            <small class="text-white">CEO & Founder</small>
+            <small class="text-white">Managing Director</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
@@ -432,7 +432,7 @@
       </div>
    </section>
 
-   <section id="clients" class="bg-light">
+   <section id="partners" class="bg-light">
             <div class="row">
             <div class="col-12 section-intro">
                <h1>Our Partners</h1>
