--- a/index.html
+++ b/index.html
@@ -365,17 +365,17 @@
                <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
                   <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
-                       <img src="img/team-4-800x800.jpg" alt="">
+                       <img src="img/team-3-800x800.jpg" alt="">
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
-                     <img src="img/team-6-800x800.jpg" alt="">
+                     <img src="img/team-4-800x800.jpeg" alt="">
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
-                     <img src="img/team-8-800x800.jpg" alt="">
+                     <img src="img/team-5-800x800.jpg" alt="">
                     </button>
                   </li>
                 </ul>
