--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </div>
    </section>
     
-   <section id="features">
+   <section id="roadmap">
       <div class="container">
          <div class="row">
             <div class="col-12 section-intro">
