--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="col-md-10">
                <h1 class="text-white display-4">WELCOME TO HIBISCUS LAB</h1>
                <p class="text-white">Let's build MAGIC in the first-ever cybercommunity owned by its users.</p>
-               <a href="#contact" class="btn btn-brand">Contact Now</a>
+               <a href="#about" class="btn btn-brand">About Us</a>
             </div>
          </div>
       </div>
