--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul class="navbar-nav ms-auto">
 
              <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="About/about.html">Home</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="#about">About</a>
