--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <ul class="navbar-nav ms-auto">
 
              <li class="nav-item">
-              <a class="nav-link" href="About/about.html">Home</a>
+              <a class="nav-link" href="#home">Home</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#about">About</a>
+               <a class="nav-link" href="About/about.htmlt">About</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="#portfolio">Portfolio</a>
