--- a/About/about.html
+++ b/About/about.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#home">Home</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#about">About</a>
+               <a class="nav-link" href="About/about.html">About</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="#portfolio">Portfolio</a>
