--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                <a class="nav-link" href="#roadmap">Roadmap</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#partners">Partners</a>
+               <a class="nav-link" href="#testimonials">Testimonials</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#testimonials">Testimonials</a>
+               <a class="nav-link" href="#partners">Partners</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="#contact">CONTACT US</a>
@@ -212,6 +212,10 @@
       <div class="container">
          <div class="row">
             <div class="col-12">
+               <h1>Our Testimonials</h1>
+               <div class="hline"></div>
+            </div>
+         </div>
 
                <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
                   <li class="nav-item" role="presentation">
