--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
             </div>
    </section>
 
-   <section id="testimonials" class="text-center">
+   <section id="testimonials">
       <div class="container">
          <div class="row">
-            <div class="col-12">
+            <div class="col-12 section-intro">
                <h1>Our Testimonials</h1>
                <div class="hline"></div>
             </div>
