--- a/about.html
+++ b/about.html
@@ -27,25 +27,25 @@
           <ul class="navbar-nav ms-auto">
 
              <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="index.html/#home">Home</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#portfolio">Portfolio</a>
+               <a class="nav-link" href="index.html/#portfolio">Portfolio</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#roadmap">Roadmap</a>
+               <a class="nav-link" href="index.html/#roadmap">Roadmap</a>
              </li>
              <li class="nav-item">
              <li class="nav-item">
-               <a class="nav-link" href="#testimonials">Testimonials</a>
+               <a class="nav-link" href="index.html/#testimonials">Testimonials</a>
              </li>
-               <a class="nav-link" href="#partners">Partners</a>
+               <a class="nav-link" href="index.html/#partners">Partners</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#contact">CONTACT US</a>
+               <a class="nav-link" href="index.html/#contact">CONTACT US</a>
              </li>
           </ul>
         </div>
