--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
    </section>
 
-   <section id="testimonials">
+   <section id="testimonials" class="text-center">
       <div class="container">
          <div class="row">
             <div class="col-12 section-intro">
