--- a/about.html
+++ b/about.html
@@ -19,8 +19,7 @@
     
    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <div class="container">
-        <a class="navbar-brand logo-text" href="#">Hibiscus Lab</a>
-        <div class ="logo"><a href ="#"><img src ="favicon-16x16.png"></a>
+        <a class="navbar-brand logo-text" ><a href ="#"><img src ="favicon-16x16.png"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
