--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="img/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png">
 
     <!-- Bootstrap CSS -->
 
@@ -19,7 +19,7 @@
     
    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <div class="container">
-        <a class="navbar-brand logo-text" ><a href ="#"><img src ="img/favicon-16x16.png"></a>
+        <a class="navbar-brand logo-text" ><a href ="#"><img src ="img/android-chrome-512x512.png"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
