--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <div class="container">
+        <a class="navbar-brand logo-text" ><a href ="#"><img src ="img/favicon.ico"</a>
         <a class="navbar-brand logo-text" href="#">Hibiscus Lab</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
