--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                <h3 class="text-white">Join a fast-growing local cybersecurity community.</h3>
             </div>
             <div class="col-auto">
-               <a href="#" class="btn btn-light">Join Now</a>
+               <a href="t.me/hibiscuslabcommunity" class="btn btn-light">Join Now</a>
             </div>
          </div>
       </div>
