--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
          </div>
          <div class="p-4">
             <h5 class="title-sm mt-3 mb-0 text-white">Nur</h5>
-            <small class="text-white">Contributor</small>
+            <small class="text-white">Social Media Director</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
@@ -178,8 +178,8 @@
             </div>
          </div>
          <div class="p-4">
-            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
-            <small class="text-white">Web Designer</small>
+            <h5 class="title-sm mt-3 mb-0 text-white">Naqib Fitri</h5>
+            <small class="text-white">Trainer</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
