--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
          </div>
          <div class="p-4">
             <h5 class="title-sm mt-3 mb-0 text-white">Irfan Badzlin</h5>
-            <small class="text-white">Managing Director</small>
+            <small class="text-white">CEO & Founder</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
@@ -162,7 +162,7 @@
          </div>
          <div class="p-4">
             <h5 class="title-sm mt-3 mb-0 text-white">Nur</h5>
-            <small class="text-white">Social Media Director</small>
+            <small class="text-white">Social Media Administrator</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
@@ -179,7 +179,7 @@
          </div>
          <div class="p-4">
             <h5 class="title-sm mt-3 mb-0 text-white">Naqib Fitri</h5>
-            <small class="text-white">Trainer</small>
+            <small class="text-white">Cybersecurity Trainer</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
