--- a/index.html
+++ b/index.html
@@ -309,6 +309,12 @@
             <div class="col-lg-2 col-md-3 col-6">
                <img src="img/logo4.svg" alt="">
             </div>
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo2.svg" alt="">
+            </div>
+            <div class="col-lg-2 col-md-3 col-6">
+               <img src="img/logo2.svg" alt="">
+            </div>
          </div>
       </div>
    </section>
