--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
          <div class="row">
             <div class="col-lg-4 col-sm-6 p-4">
                <h4 class="title-sm mt-4">About Us</h4>
-               <p> create a world where cybersecurity is a fundamental aspect of daily life, where individuals are empowered to protect themselves and their data, and where organizations prioritize cybersecurity as a core business function.</p>
+               <p>Our goal is to become a platform where individuals can share, discuss, and learn about cybersecurity, programming, and IT. We want to provide a space where people can come together to exchange knowledge, collaborate, and grow their skills. Our community is open to everyone, regardless of their experience level or background.</p>
             </div>
            
       <div class="container">
