--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                      <a href="#"><i class="bx bxl-twitter"></i></a>
                      <a href="#"><i class="bx bxl-instagram"></i></a>
                      <a href="#"><i class="bx bxl-telegram"></i></a>
+                     <a href="#"><i class="bx bxl-discord"></i></a>
                      <a href="#"><i class="bx bxl-tiktok"></i></a>
                      <a href="#"><i class="bx bxl-youtube"></i></a>
                      <a href="#"><i class="bx bxl-github"></i></a>
