--- a/index.html
+++ b/index.html
@@ -365,16 +365,16 @@
             <div class="row gy-5">
                <div class="col-md-4">
                   <h4 class="logo-text">Hibiscus Lab</h4>
-                  <p>SSM ID:XXXXXX</p>
+                  <p>SSM ID: 123456789</p>
                   <div class="social-icons">
-                     <a href="#"><i class="bx bxl-facebook"></i></a>
+                     <a href="https://www.facebook.com/profile.php?id=100084760095342"><i class="bx bxl-facebook"></i></a>
                      <a href="#"><i class="bx bxl-twitter"></i></a>
-                     <a href="#"><i class="bx bxl-instagram"></i></a>
-                     <a href="#"><i class="bx bxl-telegram"></i></a>
-                     <a href="#"><i class="bx bxl-discord"></i></a>
-                     <a href="#"><i class="bx bxl-tiktok"></i></a>
-                     <a href="#"><i class="bx bxl-youtube"></i></a>
-                     <a href="#"><i class="bx bxl-github"></i></a>
+                     <a href="https://www.instagram.com/hibiscuslab/"><i class="bx bxl-instagram"></i></a>
+                     <a href="https://t.me/hibiscuslabcommunity"><i class="bx bxl-telegram"></i></a>
+                     <a href="https://discord.gg/3aRqb9cH"><i class="bx bxl-discord"></i></a>
+                     <a href="https://www.tiktok.com/@hibiscuslab"><i class="bx bxl-tiktok"></i></a>
+                     <a href="https://www.youtube.com/channel/UCO3Igu24eoh3raBoBA7laPg"><i class="bx bxl-youtube"></i></a>
+                     <a href="https://github.com/Hibiscus-Lab"><i class="bx bxl-github"></i></a>
                   </div>
                </div>
                <div class="col-md-2">
