--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container text-center">
          <div class="row justify-content-center">
             <div class="col-md-10">
-               <h1 class="text-white display-4">WELCOME TO HIBISCUS LAB</h1>
+               <h1 class="text-white display-4">LET'S MAKE MAGIC</h1>
                <p class="text-white">Together, we can create MAGIC - a cybercommunity that is fully owned and operated by its users, and that embodies the spirit of innovation, collaboration, and security.</p>
                <a href="about.html" class="btn btn-brand">About Us</a>
             </div>
