--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     
    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
       <div class="container">
-        <a class="navbar-brand logo-text1" ><a href ="#home"><img src ="img/favicon.ico"</a>
-        <a class="navbar-brand logo-text1" href="#home">Hibiscus</a><a class="navbar-brand logo-text2" href="#home">Lab</a>
+        <a class="navbar-brand logo-text1" ><a href ="/home"><img src ="img/favicon.ico"</a>
+        <a class="navbar-brand logo-text1" href="/home">Hibiscus</a><a class="navbar-brand logo-text2" href="#home">Lab</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
