--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
    <section id="partners" class="bg-light">
             <div class="row">
             <div class="col-12 section-intro">
-               <h1>Our Partners</h1>
+               <h1>Backed by the best</h1>
                <div class="hline"></div>
             </div>
          </div>
