--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
       </div>
    </section>
    
+   <section id="testimonials" class="text-center">
+      <div class="container">
+         <div class="row">
+            </div>
+         </div>
                <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
                   <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
