--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
           <ul class="navbar-nav ms-auto">
 
              <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="/home">Home</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#portfolio">Portfolio</a>
+               <a class="nav-link" href="/portfolio">Portfolio</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#roadmap">Roadmap</a>
+               <a class="nav-link" href="/testimonials">Testimonials</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#partners">Partners</a>
+               <a class="nav-link" href="/partners">Partners</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#contact">CONTACT US</a>
+               <a class="nav-link" href="/contact">CONTACT US</a>
              </li>
           </ul>
         </div>
