--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                <a class="nav-link" href="/portfolio">Portfolio</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="/testimonials">Testimonials</a>
+               <a class="nav-link" href="/roadmap">Roadmap</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="/partners">Partners</a>
