--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@
                <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="/portfolio">Portfolio</a>
+               <a class="nav-link" href="//portfolio">Portfolio</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="/testimonials">Testimonials</a>
+               <a class="nav-link" href="/roadmap">Roadmap</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="/partners">Partners</a>
