--- a/about.html
+++ b/about.html
@@ -61,7 +61,13 @@
          <div class="row">
             <div class="col-lg-4 col-sm-6 p-4">
                <h4 class="title-sm mt-4">About Us</h4>
-               <p>Our goal is to become a platform where individuals can share, discuss, and learn about cybersecurity, programming, and IT. We want to provide a space where people can come together to exchange knowledge, collaborate, and grow their skills. Our community is open to everyone, regardless of their experience level or background.</p>
+               <p>Hibiscus Lab has an audacious but simple vision: to discover, develop and deliver a new cybersecurity revolution.
+
+Hibiscus Lab will use cybersecurity as a catalyst as an economic growth. Estimation around 20,000 professionals in the cybersecurity needed by 2025 in Malaysia. Hibiscus Lab will fill the gap by producing multiple non-techs to IT security experts within short time.
+
+The evolution of cybersecurity has been continuing to expand and grow, and cybercriminals will be right behind these new trends. The biggest challenge that most companies are facing that are into space; whether they're supporting government or whether they are securing their own system, is still not finding the right talent. The law of the certification was developed 10 or 15 years ago which may be unrelated to today cybersecurity technology.
+
+Our hope to use this critical moment in history to strengthen collaboration and cooperation nationally, regionally, and internationally – public and private sector together. </p>
             </div>
            
       <div class="container">
