--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             </div>
          </div>
          <div class="row">
-               <div class="col-12 col-sm-6 p-4">
+               <div class="col-12 p-4">
                <h4 class="title-sm mt-4">About Us</h4>
                <p>Hibiscus Lab has an audacious but simple vision: to discover, develop and deliver a new cybersecurity revolution.
 
