--- a/about.html
+++ b/about.html
@@ -198,8 +198,8 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             </div>
          </div>
          <div class="p-4">
-            <h5 class="title-sm mt-3 mb-0 text-white">John Foe</h5>
-            <small class="text-white">Web Designer</small>
+            <h5 class="title-sm mt-3 mb-0 text-white">Yasmin Anisah</h5>
+            <small class="text-white">Programming Trainer</small>
             <div class="hline"></div>
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
