--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="//portfolio">Portfolio</a>
+               <a class="nav-link" href="/portfolio">Portfolio</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="/roadmap">Roadmap</a>
