--- a/about.html
+++ b/about.html
@@ -82,22 +82,22 @@ Our hope to use this critical moment in history to strengthen collaboration and 
                <div class="icon-box">
                   <i class='bx bxs-landscape'></i>
                </div>
-               <h4 class="title-sm mt-4">Create</h4>
-               <p> create a world where cybersecurity is a fundamental aspect of daily life, where individuals are empowered to protect themselves and their data, and where organizations prioritize cybersecurity as a core business function.</p>
+               <h4 class="title-sm mt-4">Discover</h4>
+               <p> discover a world where cybersecurity is a fundamental aspect of daily life, where individuals are empowered to protect themselves and their data, and where organizations prioritize cybersecurity as a core business function.</p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
                   <i class='bx bxs-coffee'></i>
                </div>
-               <h4 class="title-sm mt-4">Build</h4>
-               <p>build a community where cybersecurity knowledge is freely shared, and individuals from diverse backgrounds and skill levels can come together to learn, collaborate, and innovate to improve cybersecurity for all.</p>
+               <h4 class="title-sm mt-4">Develop</h4>
+               <p> develop a community where cybersecurity knowledge is freely shared, and individuals from diverse backgrounds and skill levels can come together to learn, collaborate, and innovate to improve cybersecurity for all.</p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
                   <i class='bx bxs-image'></i>
                </div>
-               <h4 class="title-sm mt-4">Promote</h4>
-               <p>promote a culture of cybersecurity consciousness, where individuals and organizations are motivated and supported to make cybersecurity a top priority in their personal and professional lives.</p>
+               <h4 class="title-sm mt-4">Deviver</h4>
+               <p> deliver a culture of cybersecurity consciousness, where individuals and organizations are motivated and supported to make cybersecurity a top priority in their personal and professional lives.</p>
             </div>     
         
             <div class="container">
