--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <h5 class="title-sm mt-3 mb-0 text-white">Irfan Badzlin</h5>
             <small class="text-white">CEO & Founder</small>
             <div class="hline"></div>
-            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+            <p class="text-white">Irfan is a grit cybersecurity student that possesses a detailed knowledge of security threats and vulnerability. He strives to be a dedicated and knowledgeable cybersecurity professional and red team expert. Irfan's aims to build a new cybersecurity revolution.</p>
          </div>
       </div>
       <div class="col-lg-3 col-sm-6 team-member even">
