--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
                <div class="icon-box">
                   <i class='bx bxs-image'></i>
                </div>
-               <h4 class="title-sm mt-4">Deviver</h4>
+               <h4 class="title-sm mt-4">Deliver</h4>
                <p> deliver a culture of cybersecurity consciousness, where individuals and organizations are motivated and supported to make cybersecurity a top priority in their personal and professional lives.</p>
             </div>     
         
