--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
                            <i class="bx bxs-star"></i>
                            <i class="bx bxs-star"></i>
                            <i class="bx bxs-star"></i>
-                           <i class="bx bx-star"></i>
+                           <i class="bx bxs-star"></i>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea explicabo nisi quia blanditiis assumenda quos veritatis sit deleniti porro nulla temporibus deserunt, iure in labore incidunt quis eos. Accusamus sed excepturi architecto.</p>
-                        <h5 class="title-sm mb-0">John Doe</h5>
-                        <small>Web Developer</small>
+                        <p class="lead">sepanjang pembelajaran saya dengan cikgu genji, saya nampak dimana arah tuju dan maklumat yang perlu saya pelajari daripada belajar menonton video di youtube yang terlalu padat dan tiada arah tuju, sebab cikgu genji memberi tahu saya untuk melalukan nota catatan supaya saya ingat apa yang saya pelajari dan dapat menambah semasa ke semasa.</p>
+                        <h5 class="title-sm mb-0">Afiq</h5>
+                        <small>Mentoring Mondays's student</small>
                      </div>
 
 
@@ -287,9 +287,9 @@
                            <i class="bx bxs-star"></i>
                            <i class="bx bxs-star"></i>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea explicabo nisi quia blanditiis assumenda quos veritatis sit deleniti porro nulla temporibus deserunt, iure in labore incidunt quis eos. Accusamus sed excepturi architecto.</p>
-                        <h5 class="title-sm mb-0">John Doe</h5>
-                        <small>Web Developer</small>
+                        <p class="lead">Effective topic with relax method</p>
+                        <h5 class="title-sm mb-0">secploity</h5>
+                        <small>Mentoring Mondays's student</small>
                      </div>
                   </div>
                   <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
@@ -298,7 +298,7 @@
                            <i class="bx bxs-star"></i>
                            <i class="bx bxs-star"></i>
                            <i class="bx bxs-star"></i>
-                           <i class="bx bx-star"></i>
+                           <i class="bx bxs-star"></i>
                            <i class="bx bx-star"></i>
                         </div>
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea explicabo nisi quia blanditiis assumenda quos veritatis sit deleniti porro nulla temporibus deserunt, iure in labore incidunt quis eos. Accusamus sed excepturi architecto.</p>
