--- a/about.html
+++ b/about.html
@@ -204,6 +204,23 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
          </div>
       </div>
+      <div class="col-lg-3 col-sm-6 team-member">
+         <div class="team-member-img">
+            <img src="img/team-6-800x800.jpg" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">El Afiq</h5>
+            <small class="text-white">Media Editor</small>
+            <div class="hline"></div>
+            <p class="text-white">Afiq well skillful in video editing</p>
+         </div>
+      </div>
 
    <footer>
       <div class="footer-top">
