--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
-                     <img src="img/team-6-800x800.jpg" alt="">
+                     <img src="img/team5.jpeg" alt="">
                     </button>
                   </li>
                 </ul>
