--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
       </div>
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team-6-800x800.jpg" alt="">
+            <img src="img/team5.jpeg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
