--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
       </div>
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team-6-800x800.jpg" alt="">
+            <img src="img/team3.jpg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -184,7 +184,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <h5 class="title-sm mt-3 mb-0 text-white">Naqib Fitri</h5>
             <small class="text-white">Cybersecurity Trainer</small>
             <div class="hline"></div>
-            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+            <p class="text-white">President for Information Security and Assurance Club. Currently studying for my degree Computer Science in Universiti Sains Islam Malaysia. </p>
          </div>
       </div>
       <div class="col-lg-3 col-sm-6 team-member even">
