--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
-                     <img src="img/team-3-800x800.jpg" alt="">
+                     <img src="img/testimonial2.jpg" alt="">
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
-                     <img src="img/team-4-800x800.jpeg" alt="">
+                     <img src="img/testimonial3.png" alt="">
                     </button>
                   </li>
                 </ul>
@@ -299,11 +299,11 @@
                            <i class="bx bxs-star"></i>
                            <i class="bx bxs-star"></i>
                            <i class="bx bxs-star"></i>
-                           <i class="bx bx-star"></i>
+                           <i class="bx bxs-star"></i>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ea explicabo nisi quia blanditiis assumenda quos veritatis sit deleniti porro nulla temporibus deserunt, iure in labore incidunt quis eos. Accusamus sed excepturi architecto.</p>
-                        <h5 class="title-sm mb-0">John Doe</h5>
-                        <small>Web Developer</small>
+                        <p class="lead">Develop creative thinking</p>
+                        <h5 class="title-sm mb-0">cyberz1337</h5>
+                        <small>Mentoring Mondays"s student</small>
                      </div>
                   </div>
                 </div>
