--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <h5 class="title-sm mt-3 mb-0 text-white">Nur</h5>
             <small class="text-white">Social Media Administrator</small>
             <div class="hline"></div>
-            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+            <p class="text-white">Nur will be handling social media activities</p>
          </div>
       </div>
       <div class="col-lg-3 col-sm-6 team-member">
@@ -201,7 +201,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <h5 class="title-sm mt-3 mb-0 text-white">Yasmin Anisah</h5>
             <small class="text-white">Programming Trainer</small>
             <div class="hline"></div>
-            <p class="text-white">Well skillful lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+            <p class="text-white">Yasmin very passionate in teaching programming skills</p>
          </div>
       </div>
       <div class="col-lg-3 col-sm-6 team-member">
