--- a/about.html
+++ b/about.html
@@ -235,7 +235,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <h5 class="title-sm mt-3 mb-0 text-white">Muhammad Abrar</h5>
             <small class="text-white">Administrator</small>
             <div class="hline"></div>
-            <p class="text-white">Part of our management department</p>
+            <p class="text-white">Part of our managing department</p>
          </div>
       </div>
 
