--- a/about.html
+++ b/about.html
@@ -238,6 +238,40 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <p class="text-white">Part of our managing department</p>
          </div>
       </div>
+            <div class="col-lg-3 col-sm-6 team-member">
+         <div class="team-member-img">
+            <img src="img/team8.jpg" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">Damien Wong</h5>
+            <small class="text-white">Administrator</small>
+            <div class="hline"></div>
+            <p class="text-white">Part of our CTF department</p>
+         </div>
+      </div>
+               <div class="col-lg-3 col-sm-6 team-member">
+         <div class="team-member-img">
+            <img src="img/team7.png" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">Muhammad Amin</h5>
+            <small class="text-white">Programming Trainer</small>
+            <div class="hline"></div>
+            <p class="text-white">Part of our trainer department</p>
+         </div>
+      </div>
 
    <footer>
       <div class="footer-top">
