--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
           </div>
         </div>
       </div> 
+   </div>
         
    <section id="testimonials" class="text-center">
       <div class="container">
