--- a/index.html
+++ b/index.html
@@ -239,39 +239,9 @@
          <div class="card-item">
           <img class="card-img" src="./img/rome.jpg" alt="Rome" />
           <div class="card-content">
-            <h1 class="card-header">Rome</h1>
+            <h1 class="card-header">Learn Basic</h1>
             <p class="card-text">
-              Rome is known for its stunning <strong> architecture</strong>,
-              with the Colleseum, Pantheon, and Trevi Fountain as the main
-              attractions.
-            </p>
-            <button class="card-btn">Visit <span>&rarr;</span></button>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-         <div class="card-item">
-          <img class="card-img" src="./img/grand-canyon.jpg" alt="Grand Canyon" />
-          <div class="card-content">
-            <h1 class="card-header">Rome</h1>
-            <p class="card-text">
-              Rome is known for its stunning <strong> architecture</strong>,
-              with the Colleseum, Pantheon, and Trevi Fountain as the main
-              attractions.
-            </p>
-            <button class="card-btn">Visit <span>&rarr;</span></button>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-         <div class="card-item">
-          <img class="card-img" src="./img/maldives.jpg" alt="Maldoves" />
-          <div class="card-content">
-            <h1 class="card-header">Rome</h1>
-            <p class="card-text">
-              Rome is known for its stunning <strong> architecture</strong>,
-              with the Colleseum, Pantheon, and Trevi Fountain as the main
-              attractions.
+              Basic Introduction to learn cybersecurity
             </p>
             <button class="card-btn">Visit <span>&rarr;</span></button>
           </div>
