--- a/index.html
+++ b/index.html
@@ -149,18 +149,6 @@
          </div>
       </div>
    </section>
-        
-  <section id="learn">
-      <div class="container text-center">
-         <div class="row justify-content-center">
-            <div class="col-md-10">
-               <h1 class="text-white display-4">LEARN NOW WITH US</h1>
-               <p class="text-white">Simple introduction to learn cybersecurity</p>
-               <a href="learn.html" class="btn btn-brand">Learn Now</a>
-            </div>
-         </div>
-      </div>
-   </section>
     
    <section id="roadmap">
       <div class="container">
@@ -224,6 +212,9 @@
          </div>
       <div class="container">
          <div class="row gy-4">
+            <div class="col-lg-2 col-md-3 col-6">
+               <a href="learn.html"><img src="img/hero_img.jpg" alt="">
+            </div>
             <div class="col-lg-2 col-md-3 col-6">
                <img src="img/logo1.svg" alt="">
             </div>
