--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <div class="container">
          <div class="row gy-4">
             <div class="col-lg-2 col-md-3 col-6">
-               <a href="learn.html"><img src="img/hero_img.jpg" alt="">
+              <a href="learn.html"><img src="img/hero_img.jpg" alt=""></a>
             </div>
             <div class="col-lg-2 col-md-3 col-6">
                <img src="img/logo1.svg" alt="">
