--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <section id="project" class="row g-0 py-0">
        <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-           <a href="learn.html" class="btn btn-brand"><img src="img/hero_img.jpg" alt=""></a>
+           <a href="learn.html" class="btn btn-brand"></a><img src="img/hero_img.jpg" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar Hack (Intermediate)</h3>
